# DeltaMetrics

./: build_exe.py  pyproject.toml  requirements.txt  run_portfolio_tracker.bat  run_portfolio_tracker.py  run_portfolio_tracker.sh  setup.py  test_components.py
!Inspiration/: Thumbs.db
src/: __init__.py  main.py
src/core/: database.py
src/gui/: dashboard.py
src/utils/: config.py  crypto.py
